<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Welcome, User!"
            android:layout_marginBottom="24dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            android:layout_height="160dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ayam_geprek"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:textSize="24dp"
                android:padding="5dp"
                android:background="@color/colorAccent"
                android:gravity="center_horizontal"
                android:text="@string/bahan_ayam"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            android:layout_height="160dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/telur_balado"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:textSize="24dp"
                android:padding="5dp"
                android:background="@color/colorAccent"
                android:gravity="center_horizontal"
                android:text="@string/bahan_telur"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            android:layout_height="160dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/card_image"
                android:src="@drawable/sayur_bayam"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/card_text"
                android:layout_gravity="bottom"
                android:textSize="24dp"
                android:padding="5dp"
                android:background="@color/colorAccent"
                android:gravity="center_horizontal"
                android:text="@string/bahan_sayur"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</RelativeLayout>